fix: css button mobile

--- a/website/style.css
+++ b/website/style.css
@@ -101,23 +101,22 @@ button, input[type="submit"], input[type="reset"] {
 @media only screen and (max-width: 1025px) {
     #map, #container {
         width: 100%;
-        height: 33.3vh;
+        height: 30vh;
         display: block;
-        min-height: 33.3vh;
-
+        min-height: 20vh;
     }
     #under{
-        min-height: 67vh;
+        min-height: 60vh;
     }
     
     #container>img {
-        height: 33.3vh;
+        height: 30vh;
         width: 100%;
     }
     #container{
         min-height: 10vh;
     }
     #fly{
-        height: 20vh;
+        height: 28vh;
     }
 }
